Merge; Zwischenstand Workflow & Zusammensetzung, v.a. Befangenheitskrams.

--- a/Standardworkflow-Anrufung.tex
+++ b/Standardworkflow-Anrufung.tex
@@ -2,6 +2,7 @@
 \chapterpreamble{Trifft eine Anrufung beim Schiedsgericht ein, ist zu prüfen ob der Antragsteller antragsberechtigt ist (\S~8 Abs.~1 SGO\nomenclature{SGO}{Schiedsgerichtsordnung}) und ob die Anrufung formell vollständig ist (\S~8 Abs.~3 SGO). Die fristgerechte Klageerhebung ist bereits im Rahmen der Anrufung zu prüfen. Nur bei Zweifeln, die sich nicht ohne Ermittlungen klären lassen, ist das Verfahren zu eröffnen. Die Anschrift i.S.d. \S~8 Abs.~3 S.~1 SGO kann auch aus einer Postfachadresse bestehen.}
 
 \chapter{Schema für den Standardworkflow \enquote{Ich habe eine Anrufung erhalten}}
+
 Ein Schiedsgericht wird nur auf Anrufung tätig schreibt die SGO in \S~8 Abs.~1 S.~1 vor.
 Damit ist die Anrufung der zentrale Punkt für ein Schiedsgericht, an dem jede Tätigkeitkeit anknüpft.
 
@@ -11,16 +12,16 @@ Das soll es den Gerichten erleichtern, gewissen Standardfrage nicht immer noch i
 Grundlegend sieht der Ablauf der zu prüfenden Punkte dabei wie folgt aus:
 \begin{enumerate}[label=\Roman*.]
 % \itemsep0em 
-\item \textbf{Antragsteller}: Ist klar genannt, \emph{wer} die Klage erheben will? (\S~8 Abs.~3 Nr. 1 SGO\index[paridx]{SGO!\S~8!Abs.~3 Nr.~1})
-\item \textbf{Antragsgegner}: Ist klar genannt, gegen \emph{wen} sich die Klage richten soll? (\S~8 Abs.~3 Nr.~2 SGO\index[paridx]{SGO!\S~8!Abs.~3 Nr.~2})
-\item Sind Antragsteller und Antragsgegner \textbf{parteifähig}? (\S~8 Abs.~1 S.~1 SGO\index[paridx]{SGO!\S~8!Abs.~1 S.~1})
-\item Ist jeweils eine zulässige \emph{Anschrift} angegeben? (\S~8 Abs.~3 Nr.~1, 2 SGO\index[paridx]{SGO!\S~8!Abs.~3 Nr.~1}\index[paridx]{SGO!\S~8!Abs.~3 Nr.~2})
-\item Sagt der Antragsteller klar, \emph{was} genau er erreichen will? (\S~8 Abs.~3 Nr.~3 SGO\index[paridx]{SGO!\S~8!Abs.~3 Nr.~3})
-\item Ist das, was der Antragsteller will, etwas, das ihm nach Satzung, Parteiengesetz oder sonstigen mitgliedschaftlichen oder organschaftlichen Rechten \emph{möglicherweise zustehen könnte}? (\S~8 Abs.~1 S.~1 SGO\index[paridx]{SGO!\S~8!Abs.~1 S.~1})
-\item Nennt der Antragsteller \textbf{Gründe}, warum das gewünschte ihm zustehen sollte? (\S~8 Abs.~3 Nr.~4 SGO\index[paridx]{SGO!\S~8!Abs.~3 Nr.~4})
-\item Ist die \textbf{Form} eingehalten? (\S~8 Abs.~3 SGO\index[paridx]{SGO!\S~8!Abs.~3})
-\item Ist das angerufene Schiedsgericht \textbf{zuständig}? (\S~8 Abs.~5 SGO\index[paridx]{SGO!\S~8!Abs.~5})
-\item Ist die \textbf{Frist} eingehalten worden? (\S~8 Abs.~4 SGO\index[paridx]{SGO!\S~8!Abs.~4})
+\item \textbf{Antragsteller}: Ist klar genannt, \emph{wer} die Klage erheben will? (\S~8 Abs.~3 Nr. 1 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3})
+\item \textbf{Antragsgegner}: Ist klar genannt, gegen \emph{wen} sich die Klage richten soll? (\S~8 Abs.~3 Nr.~2 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3})
+\item Sind Antragsteller und Antragsgegner \textbf{parteifähig}? (\S~8 Abs.~1 S.~1 SGO\index[paridx]{SGO!8@\S~8!1@Abs.~1})
+\item Ist jeweils eine zulässige \emph{Anschrift} angegeben? (\S~8 Abs.~3 Nr.~1, 2 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3})
+\item Sagt der Antragsteller klar, \emph{was} genau er erreichen will? (\S~8 Abs.~3 Nr.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3})
+\item Ist das, was der Antragsteller will, etwas, das ihm nach Satzung, Parteiengesetz oder sonstigen mitgliedschaftlichen oder organschaftlichen Rechten \emph{möglicherweise zustehen könnte}? (\S~8 Abs.~1 S.~1 SGO\index[paridx]{SGO!8@\S~8!1@Abs.~1})
+\item Nennt der Antragsteller \textbf{Gründe}, warum das gewünschte ihm zustehen sollte? (\S~8 Abs.~3 Nr.~4 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3})
+\item Ist die \textbf{Form} eingehalten? (\S~8 Abs.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3})
+\item Ist die \textbf{Frist} eingehalten worden? (\S~8 Abs.~4 SGO\index[paridx]{SGO!8@\S~8!4@Abs.~4})
+\item Ist das angerufene Schiedsgericht \textbf{zuständig}? (\S~8 Abs.~5 SGO\index[paridx]{SGO!8@\S~8!5@Abs.~5})
 \end{enumerate}
 
 \section{Statthaftigkeit}
@@ -56,18 +57,18 @@ Der Antragsgegner\index[idx]{Antragsgegner|textbf} oder die Antragsgegnerin ist 
 
 Bei allen Verfahren nach SGO\nomenclature{SGO}{Schiedsgerichtsordnung} handelt es sicht um sogenannte kontradiktorische Verfahren.
 Das bedeutet, dass das Verfahren Streit von zwei Parteien um gegenläufige Interessen ausgestaltet ist.
-In den meisten Fällen ist der Antragsgegner bzw. die Antragsgegnerin daher ein Organ, in wenigen Fällen aber auch ein Mitglied.
+In den meisten Fällen ist der Antragsgegner bzw. die Antragsgegnerin daher ein Organ, in wenigen Fällen -- primär bei gerichtlich verhängten Ordnungsmaßnahmen wie dem Parteiausschluss -- aber auch ein einzelnes Mitglied.
 Wichtig dabei ist aber: Es gibt nach SGO keine Verfahren von Mitgliedern gegen andere Mitglieder.
 Schon fraglich ist, ob ein einzelner Amtsträger bzw. eine Amträgerin gegen einen anderen Amträgräger bzw. eine andere
 Amtsträgerin einzeln vorgehen kann, dazu gab es bisher noch nie einen Anlass, das zu entscheiden.
 Theoretisch ist es aber nicht komplett ausgeschlossen.
 Möglich ist in jedemfall das vorgehen einer Amtsträgerin bzw. eines Amtsträgers gegen das restliche Organ, eines Organs  gegen einzelne Amtsträger und Amtsträgerinnen sowie das vorgehen von Mitgliedern gegen Organe und andersherum.
-Wichtig ist daher der Grundsatz: Aus dem Antragsteller oder der Antragstellerin ergibt sich zwnagsweise ein eingeschränkter Kreis möglicher Antragsgegner und Antragsgegnerinnen.
+Wichtig ist daher der Grundsatz: Aus dem Antragsteller oder der Antragstellerin ergibt sich zwangsweise ein eingeschränkter Kreis möglicher Antragsgegner und Antragsgegnerinnen.
 
 \subsection{Parteifähigkeit}
 \label{Standardworkflow:Parteifaehigkeit}
 Gerade wude es schon angesprochen: Antragsteller bzw. Antragstellerin und Antragsgegner bzw. Antragsgegnerin sind die \index[idx]{Streitpartei}Parteien des Prozesses.
-Nach SGO sind Mitglieder und Organe explizit dazu berechtigt, ein Schiedsgericht anzurufen, wenn sie sich in ihren Rechten verletzt fühlen, \S~8 Abs.~1 S.~2 SGO\index[paridx]{SGO!\S~8!Abs.~1 S.~2}.
+Nach SGO sind Mitglieder und Organe explizit dazu berechtigt, ein Schiedsgericht anzurufen, wenn sie sich in ihren Rechten verletzt fühlen, \S~8 Abs.~1 S.~2 SGO\index[paridx]{SGO!8@\S~8!1@Abs.~1}.
 Das bedeutet, dass diese auch zwingend Partei in einem Schiedsgerichtsverfahren sein können.
 Ferner muss die Parteifähigkeit\index[idx]{Parteifähigkeit} auch Amtsträgern als spezieller Art von Mitgliedern zugestanden werden.
 Ob man dabei davon ausgeht, dass Amtsträger eine eigene Kategorie von Partei darstellen oder lediglich Mitglider sind, deren Rechte aufgrund einer Wahl zeitlich beschränkt verändert wurden, ist eigentlich eine akademische Debatte.
@@ -79,30 +80,182 @@ Daher kann fast davon ausgegangen werden, dass es nicht zu einer solchen Klageko
 
 Fraglich ist zudem ob die Partei bzw. die einzelnen Gliederungen Parteifähig im Sinne der SGO sind.
 Während dies für Prozesse vor staatlichen Gerichten aufgrund der dortigen Regelungen zur Parteifähigkeit\footnote{Vgl. etwa \S~50 ZPO\nomenclature{ZPO}{Zivilprozessordnung}\index[paridx]{ZPO!\S~50}.} grundsätzlich anzunehmen ist, spielt die Partei bzw. Gliederung als solche im internen Rechtsstreit eine untergeordnete Rolle, da die Handlung immer zumindest einem Organ oder zumindest Amtsträger zugeordnet werden kann.
-Daher ist auch das Bundesschiedsgericht in seiner Rechtsprechung dazu übergegangen, die Parteifähigkeit der Partei und ihrer Gliederungen nur zu bejahen, wenn eine derartige Zurechnung nicht möglich ist\footnote{Vgl. \cite[S. 4]{BSG1614HS}.}.
-Die Partei und die Gliederungen kommen also nur als subsidiärer Antragsgegner bzw. Antragsgegnerin in betracht.
+Daher ist auch das Bundesschiedsgericht in seiner Rechtsprechung dazu übergegangen, die Parteifähigkeit der Partei und ihrer Gliederungen nur zu bejahen, wenn eine derartige Zurechnung nicht möglich ist.\footnote{Vgl. \cite[S. 4]{BSG1614HS}; Diese Rechsprechung fortführend \cite[S. 2]{BSG3815HS} mwN.}
+Die Partei und die Gliederungen kommen also nur als subsidiärer Antragsgegner bzw. Antragsgegnerin in Betracht.
 
 \subsection{Anschrift}
 \label{Standardworkflow:Anschrift}
+Der Antragsteller muss seine eigene Anschrift sowie die des Antragsgegners angeben.
+Die Anschrift ist notwendig, damit das Schiedsgericht im Verfahren mit den Parteien in Kontakt treten kann.
+Auch wenn die Kommunikation per E-Mail im Verfahren üblich ist, ist es hier notwendig, dass eine postalische Adresse genannt wird.\footnote{Ausführlich dazu \cite[S. 3]{BSG20130715} mwN.}
+So gibt es zwar keinen Anspruch mehr in der SGO auf eine Urteilszusendung in Schriftform, die die Kenntnis einer postalischen Adresse früher zwingend machte, jedoch ist die Anschrift nach wie vor zur Individualisierung und damit zur Mitgliedsverifikation durch das Schiedsgericht erforderlich. Auch im Fall, dass eine Person mittels einer lediglich vom Verfahrensgegner genannten E-Mailadresse nicht erreichbar ist, ist eine zusätzlicher Kontaktversuch per Brief erforderlich, um die Rechte der nicht erreichbaren Verfahrenspartei zu sichern.
+
+Die weiteren Kontaktdaten gemäß \S~8 Abs.~3 Nr.~1 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} umfassen Daten wie eine E-Mailadresse. Diese ist aus prozessökonomischen Gründen sinnvoll, da ein Information per E-Mail die Verfahrensparteien schneller erreicht und diese auch schneller reagieren können. Das ganz das Verfahren insgesamt erheblich beschleunigen und macht die direkte Versendung in Kopie zudem einfacher.
+
+Dass die Anschrift unbekannt ist, kann auch nie ein Problem darstellen. Verfahren von Mitglied gegen Mitglied sind schon gar nicht vorgesehen (siehe \ref{Standardworkflow:Antragsgegner}), der Partei ist die Anschrift eines Mitglieds aus der Mitgliederdatenbank bekannt, die Anschrift der Partei und der Gliederungen sind allgemein bekannt, die Organe haben ihre Anschrift für gewöhnlich bei der Gliederung, oder, falls diese abweicht, ist sie vom Organ bekannt gemacht.
 
 \subsection{Anträge}
 \label{Standardworkflow:Antraege}
+Ebenfalls zwingend erforderlich ist es, dass der Antragssteller mit der Anrufung bereits Anträge stellt.
+Diese Anträge müssen nach \S~8 Abs.~3 Nr.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} klar und eindeutig sein.
+Diese innere Dopplung der Formulierung zeigt schon, dass es dem Satzungsgeber darauf ankam, dass der Antragsteller explizit sagen muss, was exakt er mit der Anrufung erreichen will.
+Das Schiedgericht ist daher nicht verpflichtet, zu spekulieren und Vermutungen darüber anzustellen, was der Antragsteller gewollt haben könnte. 
+Wenn der Antragsteller das nicht in seiner Anrufung klar erkennbar niederschreibt, dann ist die Anrufung unvollständig und daher nicht statthaft.
+
+Die Erfordernis der genauen Anträge dient auch dazu, die genaue Klageart festzustellen, da diese Einfluss auf das weitere Verfahren haben kann.
+Zudem dienst diese Anforderung dem Zweck, sicherzustellen, dass das Schiedsgericht weiß, in welche Richtung es seine Amtsermittlungspflicht gemäß \S~10 Abs.~1 S.~1 Hs.~1 SGO\index[paridx]{SGO!10@\S~10!1@Abs.~1} ausüben muss, um alle relevanten Fragen beantworten zu können, die sich für eine Entscheidung in der Sache stellen.
+
+Bei der Prüfung, ob Anträge gestellt wurden, ist also eine sehr strenger Maßstab anzulegen. Wird nicht klar und eindeutig spezifiziert, was der Antragsteller vom Antragsgegner will, liegt schon gar kein Antrag vor.
+Ob der Antrag erfüllbar ist und rechtmäßig gestellt wurde, wird allerdings hier noch nicht entschieden.
+Insofern ist es auch nur eine sehr formale und eingschränkte Prüfung, ob einer oder mehrere Anträge gestellt wurden.
+
+Und natürlich reicht entgegen der Pluralformulierung von \S~8 Abs.~3 Nr.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} ein einzelner Antrag auch aus. Es ist nicht Sinn und Zwekc der Regelung, dass ein Antragsteller, der nur eine einzelne Sache erreichen will, einen absolut unnötigen zusätzlichen Antrag stellt und das Schiedsgericht so mit Mehrarbeit belastet oder gar schon überhaupt nicht klagen darf, nur weil er nur eine Sache erreichen will.
 
 \subsection{Begründung und Umstände}
 \label{Standardworkflow:Gruende}
+Die letzte Anforderung des \S~8 Abs.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} sind eine Darstellung der Umstände und Schilderung einer Begründung der Anträge.
+Damit soll dem Schiedsgericht ein Anhaltspunkt für seine Amtsermittlung des Sachverhaltes nach \S~10 Abs.~1 S.~1 Hs.~1 SGO\index[paridx]{SGO!10@\S~10!1@Abs.~1} gegeben werden und dem Antragsgegner eine Möglichkeit, auf die Klage zu erwiedern.
+Der Sinn und Zweck dieser Anforderung ist also, einen Startpunkt für das Verfahren haben, und den Streit der Parteien einsortieren zu können.
+Entsprechend sind an keine hohen inhaltlichen Anforderungen zu stellen.
+Solange ein Geschehen geschildert wird und irgendwelche Argumente angeführt werden, warum diese oder jene rechtliche Bewertung dafür zu gelten habe, ist regelmäßig anzunehmen, dass diese Punkt erfüllt ist.
+Andernfalls würde \S~8 Abs.~3 Nr.~4 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} eine Vorwegnahme der eigentlichen Beurteilung des Verfahrens darstellen, dass das Gericht erst nach ausführlicher Beschäftigung mit der Sache selbst durch die Durchführung des Verfahrens tätigen soll.
 
-\section{Antragsbefugnis}
+\section{Weitere Kriterien}
+\label{Standardworkflow:Kriterien}
+Neben der Statthaftigkeit gibt es noch weitere Kriterien, die für eine erfolgreiche Anrufung erfüllt sein müssen.
+Dies sind unechte Zulässigkeitskriterien, da sie die Klage unzulässig machen, aber nicht erst im Verfahren mit dem Urteil beschieden werden, sondern schon mit Eröffnung.
+Die Satzung nennt diese Kriterien auch Zulässigkeitskriterien der Eröffnung, vgl. \S~8 Abs.~6 Satz~4 SGO\index[paridx]{SGO!8@\S~8!6@Abs.~6}.
+
+\subsection{Antragsbefugnis}
 \label{Standardworkflow:Antragsbefugnis}
+Die Notwendigkeit der Antragsbefugnis geht aus \S~8 Abs.~1 SGO\index[paridx]{SGO!8@\S~8!1@Abs.~1} hervor und soll sogenannte Popularklagen verhinden.
+Eine Antragsbefugnis liegt dann vor, wenn der Antragsteller selbst in seinen eigenen Rechten aus der Mitgliedschaft oder seinem sonstigen innerparteilichen Status verletzt ist oder ein Anspruch aus dieser Position nicht erfüllt wird.
+Die Abgrenzung von eigenen Rechten und eigenen Ansprüchen ist nicht immer einfach, aber auch nicht zwingend nötig, da Alternativ eines von beides ausreicht.
+Entsprechend den anderen nicht rein förmlichen Anrufungskriterien ist hier kein hoher inhaltlicher Anspruch zu stellen.
+Daher muss für die Eröffnung lediglich dargelegt werden, dass ein solches Recht oder ein solcher Anspruch verletzt sein könnte.
+Eine tiefere Prüfung erfolgt bei der Entscheidung über Eröffnung nicht, sondern im Zweifelsfall immer erst im laufenden Verfahren.
+Hat das Schiedgericht von Anfang an Zweifel an der in der Anrufung dargeleten Begründung der Antragsbefugnis, ist das Verfahren dennoch zu eröffnen. Es bietet sich dann aber an, der anrufenden Partei einen richterlichen Hinweis zu geben, dass sie die Begründung diesbezüglich erweitern sollte.
+Das geht auch aus \S~8 Abs.~5, 6 Satz~1 SGO\index[paridx]{SGO!8@\S~8!5@Abs.~5} hervor. Dort wird bestimmt, wann das Verfahren zu eröffnen ist. Nämlich immer dann, wenn das angerufene Schiedsgericht zuständig ist und die Anrufung korrekt erfolgte.
+Korrekte Anrufung kann aber nur formelle Kriterien meinen, eine weitergehende, inhaltliche Prüfung zu diesem Zeitpunkt ist daher unzulässig.
+Die Antragsbefugnis ist damit ein echtes Zulässigkeitskriterium und erst nach durchgeführtem Verfahren im Endurteil zu bescheiden.
 
-\section{Form}
+\subsection{Form}
 \label{Standardworkflow:Form}
+Die Anforderungen an die Form der Anrufung sind sehr gering.
+Es wird in \S~8 Abs.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} lediglich die Textform gefordert.
+Im Gegensatz zur Schriftform, deren Erfüllung und Nichterfüllung bei untergesetzlicher vorgeschriebener Formerfordernis sehr strittig ist und auch in der Schiedsgerichtsbarkeit der Piratenpartei schon zu Entscheidungen führte\footcite{LSGBB146}, ist die Textform ausreicht klar und eindeutig in \S~126b BGB\index[paridx]{BGB!\S~126b} definiert und eine Formlockerung in \S~127 BGB\index[paridx]{BGB!\S~127} nicht vorgesehen.
+Es reicht daher ein Schreiben, das mit dem Namen unterzeichnet ist und das in einer Form, die zur visuellen Widergabe des Inhalts geeignet ist.
 
-\section{Zuständigkeit}
-\label{Standardworkflow:Zustaendigkeit}
-
-\section{Frist}
+\subsection{Frist}
 \label{Standardworkflow:Frist}
+Die Frist für eine Anrufung soll sicherstellen, dass Streitigkeiten schnell geklärt werden.
+Damit soll verhindert werden, dass auf Basis einer möglicherweise rechtswidrigen Handlung weitere Dinge passieren und eine Klage, die erst nach langer Zeit eingereicht wird, unerwartet alles mitreißen kann.
+Kurz gesagt: Nach einer gewissen Zeit sollen alle möglicherweise Betroffenen auf einen eingetretenen Zustand vertrauen können.
+Daher darf nach Ablauf dieser Frist nicht mehr geklagt werden.
+Dabei kennt die SGO unterschiedliche Anrufungsfristen.
+\begin{enumerate}
+\item Die Standardanrufungsfrist von 2 Monaten, \S~8 Abs.~4 Satz~1 SGO\index[paridx]{SGO!8@\S~8!4@Abs.~4}
+\item Die Anrufungsfrist in Einspruchsverfahren gegen Ordnungsmaßnahmen von 14 Tagen, \S~8 Abs.~4 Satz~2 SGO\index[paridx]{SGO!8@\S~8!4@Abs.~4}
+\item Die Anrufungsfrist in Parteiausschlussverfahren, \S~8 Abs.~4 Satz~3 SGO\index[paridx]{SGO!8@\S~8!4@Abs.~4}
+\item Die Berufungsfrist gegen ein Urteil mit korrekter Rechtsmittelbelehrung, \S~13 Abs.~2 Satz~1 SGO\index[paridx]{SGO!13@\S~13!2@Abs.~2}
+\item Die Berufungfrist gegen ein Urteil ohne korrekte Rechtsmittelbelehrung, \S~13 Abs.~2 Satz~4 SGO\index[paridx]{SGO!13@\S~13!2@Abs.~2}
+\end{enumerate}
 
+TODO
+
+\subsection{Zuständigkeit}
+\label{Standardworkflow:Zustaendigkeit}
+Über die Zuständigkeit hat das Gericht bereits mit Anrufung zu entscheiden, \S~8 Abs.~5 SGO\index[paridx]{SGO!8@\S~8!5@Abs.~5}.
+Dies hat den Hintergrund, dass die SGO anders als die staatliche Gerichtsbarkeit, keine Verweisung vom unzuständigen, angerufenen Gericht an das zuständige Gericht vorsieht.
+Auch sind die Zuständigkeitskriterien der SGO nach \S~6 SGO\index[paridx]{SGO!\S~6} wesentlich einfacher als etwa die der ZPO.
+So ist es bereits aus den Daten der Anrufung ersichtlich, ob ein Gericht zuständig ist.
+
+\subsubsection{Grundlegendes}
+\label{Standardworkflow:Zustaendigkeit:Grundlegendes}
+Dabei wird instanziell bei den untersten Gerichten, also den Landesschiedsgerichten begonnen, \S~6 Abs.~1 SGO\index[paridx]{SGO!6@\S~6!1@Abs.~1}.
+\S~6 Abs.~2 SGO\index[paridx]{SGO!6@\S~6!2@Abs.~2} bestimmt dann noch, dass sie die Zuständigkeit nach der Verbandszugehörigkeit des Antragsgegners richtet.
+Verbandszugehörige sind die Mitglieder eines Verbandes, das können nach \S~2 Abs.~1 Satz~2 PartG\index[paridx]{PartG!2@\S~2!1@Abs.~1} nur natürliche Personen sein.
+Dabei wird in \S~6 Abs.~2 SGO nochmal klargestellt, was sich aus \S~8 Abs.~5 SGO, der die Entscheidung über die Zuständigkeit mit der Eröffnung als Entscheidung über die Korrektheit der Anrufung zusammenlegt, ergibt: Der relevante Zeitpunkt für die Entscheidung ist immer die mitgliedschaftliche Zuordnung zum Zeitpunkt der Anrufung.
+Das wiederrum hängt auch damit zusammen, dass es keine Verweisung zwischen den einzelnen Gerichten gibt und es der anrufenden Streitpartei nicht zugemutet werden soll, dass ein etwaiger Gliederungswechsel oder z.B. eine Verschmelzung von Gliederungen das schon angelaufene Verfahren ungültig macht, weil es im Nachinein unzulässig wurde.
+
+\subsubsection{Zuständigkeit bei Verfahren gegen ein Organ}
+\label{Standardworkflow:Zustaendigkeit:Organ}
+Organe haben -- juristisch streng genommen -- keine Zugehörigkeit, sondern sind Teil eines Verbandes und handeln für diesen.
+Man könnte zwar eine Zugehörigkeit im allgemeinen Sprachgebrauch konstruieren für den Verband, dessen Teil sie sind.
+Aber auch in diesem Fall leitet sich daraus keine Zugehörigkeit zu den höheren Verbänden ab.
+Daher würde die Sonderzuständigkeitsregelung nach \S~6 Abs.~3 SGO\index[paridx]{SGO!6@\S~6!3@Abs.~3} die Zuständigkeit des Bundesschiedsgerichts für Verfahren gegen Bundesorgane anordnet, die Zuständigkeit für Verfahren gegen Organ von Verbänden unterhalb der Landesebene offenlassen.
+Diese wäre dann nicht definiert. Das ist eine offensichtliche planwidrige Regelungslücke, da es nicht gewollt sein kann, dass Verfahren gegen untergeordnete Gliederungen unmöglich sind, zumal die Schiedsgerichtsordnung selbst in \S~2 Abs.~1 Satz~2 SGO\index[paridx]{SGO!2@\S~2!1@Abs.~1} nicht passivlegitimiert ist.
+Daher bietet sich eine analoge Anwendung der Zuständigkeitsregelungen für Organe nach \S~6 Abs.~3 SGO\index[paridx]{SGO!6@\S~6!3@Abs.~3} an: Das niedrigste Schiedsgericht auf gleicher oder höherer Verbandsebene wie das Organ, das Antragsgegner ist, ist zuständig.
+
+\subsubsection{Zuständigkeit bei Disziplinarverfahren}
+\label{Standardworkflow:Zustaendigkeit:Disziplinarverfahren}
+Für die Verfahren mit Disziplinarcharakter, also Verfahren über Einsprüche gegen Ordnungsmaßnahmen und Parteiausschlussverfahren, ist die Zuständigkeit nochmal gesondert in \S~6 Abs.~4 SGO\index[paridx]{SGO!6@\S~6!4@Abs.~4} geregelt.
+Die etwaige Einrichtung von Schiedsgerichten unterhalb der Landesebene soll nichts am Verfahrensablauf ändern und das Verfahren etwa durch eine Instanz mehr im Zweifel in die Länge ziehen und gleichzeitig soll in jedem Fall der für Parteiausschlussverfahren in \S~10 Abs.~5 Satz~2 PartG\index[paridx]{PartG!10@\S~10!5@Abs.~5} vorgeschriebene zweizügige Instanzenzug für alle Mitglieder gleich aussehen. Im selben Zug wird eine nicht notwendige zweite Instanz auch für Einsprüche gegen Ordnungsmaßnahmen garantiert.
+
+Durch die exklusive Formulierung sperrt \S~6 Abs.~4 SGO\index[paridx]{SGO!6@\S~6!4@Abs.~4}.
+Dadurch könnte man aus der Präsensformulierung des Teilsatzes \enquote{Landesverband […], bei dem der Betroffene Mitglied ist.} schließen, dass ein anderer Zeitpunkt für die Entscheidung über die Zuständigkeit relevant wird.
+In Betracht kommen hier sowohl die frühere Zeitpunkt des Beschlusses des Organs über die Verhängung der Ordnungsmaßnahme oder der Einreichung eines Parteiausschlussantrages und der frühere Zeitpunkt der vorgerichtlichen Anhörung des Mitglieds im Disziplinarverfahren als auch der spätere Zeitpunkt der tatsächlichen Entscheidung über die Eröffnung.
+Ein späterer Zeitpunkt käme wegen \S~8 Abs.~5 SGO\index[paridx]{SGO!8@\S~8!5@Abs.~5} definitiv nicht mehr in Betracht, eine Flucht aus einem laufenden Parteiausschlussverfahren in einen anderen Verband ist daher definitiv nicht möglich.
+Grundsätzlich bietet es sich aus den schon oben geschilderten, sich aus \S~8 Abs.~5 SGO\index[paridx]{SGO!8@\S~8!5@Abs.~5}
+
+Problematisch wird dies allerdings in den Fällen, in denen zwischen Start des Disziplinarverfahrens durch Anhörung, dem Beschluss darüber und der Schiedsgerichtsanrufung ein Verbandswechsel des Betroffenen erfolgt.
+Im Falle einer Ordnungsmaßnahme würde dann ein verbandsfremdes Schiedsgericht über die Handlung eines Verbandsorgans entscheiden und auch Ermessenskontrolle über dieses Organ ausüben, im Falle eines Parteiausschlusses wäre dann auch noch die Frage, ob ein schon beschlossener und zum Beschlusszeitpunkt zulässiger, aber noch nicht einreichter Parteiausschlussantrag seine Zulässigkeit verliert, zu entscheiden.
+
+Für die Frage der verbandsfremden Ermessenskontrolle muss allerdins bedacht werden, dass in beiden Fällen das letzinstanzlich zuständige Bundesschiedsgericht das letzte Wort hätte.
+Daher scheint ein außeinanderfallen von Verbandszugehörigkeit des ersintanzlich zuständigen Schiedsgerichts und des verhängenden Organs schlussendlich doch unproblematisch, zumal die gesonderte Regelung durch \S~6 Abs.~4 SGO\index[paridx]{SGO!6@\S~6!4@Abs.~4} wohl auch das mitbezweckt hat.
+
+Für den Parteiausschluss wird das wohl davon abhängen, wie man ihn im Vergleich zu den anderen Ordnungsmaßnahmen einsortiert. Wird er einfach nur als stärkste Ordnungsmaßnahme einsortiert, auf die das Prozedere der Ordnungsmaßnahmen nach \SSS~14, 6 Abs.~1 BS\index[paridx]{BS!\S~14}\index[paridx]{BS!6@\S~6!1@Abs.~1} voll anwendbar ist\footnote{So wohl die jüngste Ansicht des Bundesschiedsgerichtes in \cite{BSG3615HS} und die Mindermeinung des Bundesschiedsrichters a.D. Markus Gerstel in \cite{BSG20131005}.}, muss sich der Betroffene wohl damit abfinden, dass er ab Anhörung  bzw. spätestens ab dem Beschluss des Organs über die Einreichung einen Verbandswechsel der Zulässigkeit des Verfahrens nicht mehr entgegenhalten kann, um auch hier eine Gleichheit mit den anderen Ordnungsmaßnahmen zu erreichen.
+Denn wenn das betroffene Mitglied  von dem Plan für Parteiaausschlussverfahren wusste und deswegen den Verband wechselt, ist es nicht schutzwürdig, ganz unabhängig davon, ob der Wechsel im Innenverhältnis der Gliederungen nach \S~3 Abs.~2a BS\index[paridx]{SGO!3@\S~3!2@Abs.~2}
+Folgt man hingegen der in \cite{BSG20131005} aufgezeigten Rechtssprechungslinie und sieht die Anhörung durch das einleitende Organ im Parteiausschlussverfahren als nicht verpflichtend an, so ergibt sich kein Grund, warum das Mitglied einen solchen Beschluss gegen sich gelten lassen muss, von dem es im Zweifel noch nicht einmal etwas wusste.
+Das Vertrauen darauf, dass grundsätzlich nur die Organe der Gliederungen, in denen man tatsächlich aktuell Mitglied ist,  Disziplinarmaßnahmen gegen das Mitglied unternehmen, ist dann schutzwürdig und der relevante Zeitpunkt für die Entscheidung über die Zuständigkeit dürfte wieder mit der Anrufung beim Schiedsgericht zusammenfallen.\footnote{Vgl.  wie schon oben \cite[S. 9]{BSG115HS}, unter II.1.c.c).}
+
+\section{Bescheidung der Eröffnung}
+\label{Standardworkflow:Beschluss}
+Nach der Prüfung aller dargelegten Kriterien ist über die Eröffnung zu bescheiden.
+
+\subsection{Nachbesserung}
+\label{Standardworkflow:Beschluss:Nachbesserung}
+Sind die Kriterien nicht erfüllt, weil eine odere mehrere notwendige Angaben ganz oder teilweise fehlen, sollte der anrufenden Partei zunächst die Möglichkeit der Nachbesserung gegeben werden.
+Die anrufende Partei sollte dabei möglichst genau auf die fehlenden Angaben hingewiesen werden.
+Allerdings ist besonders auf die Frist zu achten.
+Eine im Zeitpunkt der Verfristung unvollständige Anrufung ist unheilbar verfristet.
+Daher ist eine Anrufung, die fristgerecht, aber unvollständig einging, und deren Anrufungsfrist vor einer Antwort durch das Gericht abgelaufen ist, nicht mit einer Nachbesserungsaufforderung zu beantworten, sondern mit einem Nichteröffnungsbeschluss.
+Eine Ausnahme besteht dann, wenn sich die Frist aus dem vorgetragenen nicht berechnen lässt.
+Das ist typischerweise der Fall, wenn eine schlichtungspflichtige Anrufung vorliegt, aber Angaben zur Schlichtung und ihrem Umfang v.a. in zeitlicher Hinsicht fehlen.
+In diesem Fall kann wegen der Hemmungswirkung der Schlichtung die Frist nicht berechnet werden, daher bietet sich hier zunächst eine Nachbesserungsaufforderung an.
+
+Die Nachbesserungsaufforderung ist allerdings keine satzungsmäßige Pflicht der Schiedsgerichte.
+Jedes Schiedsgericht kann eine unvollständige Anrufung auch sofort mit einem Nichteröffnungsbeschluss bescheiden.
+Allerdings ist jahrelange Praxis der meisten Schiedsgerichte, zunächst um Nachbesserung zu bitten, da dies allen Beteiligten, auch dem Schiedsgericht selbst unnötige Arbeit ersparen kann.
+
+\subsection{Nichtseröffnungsbeschluss}
+\label{Standardworkflow:Beschluss:Nichteroeffnung}
+Wenn eine Partei nicht erfolgreich nachbessert bleibt keine andere Option als die Anrufung abzuweisen.
+Die Abweisung muss begründet erfolgen, \S~8 Abs.~8 Satz~2 SGO\index[paridx]{SGO!8@\S~8!6@Abs.~6}
+
+Es sollten also genau erläutert werden, warum das Verfahren nicht eröffnet wird.
+Gab es mehrere Gründe, sollten auch alle alternativen Gründe angeführt werden.
+Einerseits hilft das dem Rechtsschutzschuchenden, beim nächsten Mal etwas nicht zu übersehen, und zudem hilft das für den Fall, dass eine Nichteröffnungsbeschwerde beim Rechtsmittelgericht eingelegt wird, allen Beteiligten, das Verfahren schnell zu bearbeiten.
+
+\subsection{Eröffnungsbeschluss}
+\label{Standardworkflow:Beschluss:Eroeffnung}
+Sind alle Kriterien erfüllt und die Anrufung daher korrekt im Sinne des \S~8 Abs.~5 SGO\index[paridx]{SGO!8@\S~8!5@Abs.~5}, ist das Verfahren zu eröffnen.
+
+Im Eröffnungsbeschluss sind nach \S~9 SGO\index[paridx]{SGO!9@\S~9} einige Mitteilungen an die Parteien zu machen.
+Den Parteien soll mitgeteilt werden:
+\begin{enumerate}
+\item Das Datum des Eröffnungsbeschlusses.
+\item Das Aktenzeichen.
+\item Die komplette Besetzung des Spruchkörpers.
+\item Bei Änderungen gegenüber der Standardbesetzung die Gründe dafür.
+\item Eine Kopie des Anrufungsschreibens.
+\item Die Information, das ein Verfahrensvertreter bestellt werden kann, bzw. im Falle, dass eine Verfahrenspartei ein Organ ist, dass sie dies tun muss.
+\item Eine Aufforderung zur Stellungnahme an beide Verfahrensparteien zum Verfahren.
+\item Die Ladung zur (fern-)mündlichen Verhandlung, sofern sie schon steht mit dem Hinweis, dass auch in Abwesenheit Verhandelt werden kann, \S~10 Abs.~5 Satz~4 SGO\index[paridx]{SGO!10@\S~10!5@Abs.~5}.
+\item Der Hinweis, dass die Parteien das Recht haben Richter abzulehen mit Hinweis auf die Präklusion nach \S~5 Abs.~2 Satz~4 SGO\index[paridx]{SGO!5@\S~5!2@Abs.~2}.
+\item Gründe, die Richter nach \S~5 Abs.~2 Satz~3 SGO\index[paridx]{SGO!5@\S~5!2@Abs.~2} anzeigen müssen.
+\item Nur bei Verfahren über eine Ordnungsmaßnahme oder einen Parteiausschluss: Frage an das Mitglied, ob es ein nichtöffentliches Verfahren wünscht.
+\end{enumerate}
 
 \chapterbib
 % \end{refsection}
