--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -16,7 +16,7 @@
   substitle	= {Gesetz über die politischen Parteien},
   titleaddon	= {Kommentar},
   shorthand	= {Ipsen},
-  publisher	= {Beck},
+  publisher	= {C.H.Beck},
   year		= {2008},
   address	= {München},
   isbn		= {978-3406575310}
@@ -29,7 +29,7 @@
   shorthand	= {Kersten/Rixen},
   publisher	= {Kohlhammer},
   year		= {2009},
-  address	= {Stuttgart},
+  location	= {Stuttgart},
   isbn		= {978-3-17-019131-0}
 }
 @COMMENTARY{morlok2013parteiengesetz,
@@ -40,7 +40,30 @@
   publisher	= {Nomos},
   edition	= {2},
   year		= {2013},
-  address	= {Baden-Baden}
+  location	= {Baden-Baden}
+}
+@COMMENTARY{BVerfGGMitarbeiterKommentar,
+  author	= {Dieter~C. Umbach and Thomas Clemens and Franz-Wilhelm Dollinger},
+  title		= {Bundesverfassungsgerichtsgesetz},
+  shorttitle	= {BVerfGG},
+  titleaddon	= {Mitarbeiterkommentar und Handbuch},
+  shorthand	= {BVerfGG},
+  publisher	= {C.F.Müller},
+  edition	= {2},
+  year		= {2005},
+  location	= {Heidelberg}
+}
+@COMMENTARY{ZoellerZPO2004,
+  author	= {Richard Zöller},
+  founder	= {Richard Zöller},
+  title		= {Zivilprozessordnung},
+  shorttitle	= {ZPO},
+  titleaddon	= {Kommentar},
+  shorthand	= {Zöller},
+  publisher	= {Verlag Dr. Otto Schmidt},
+  edition	= {24},
+  year		= {2004},
+  location	= {Köln}
 }
 
 @ARTICLE{Loewisch1985,
@@ -184,6 +207,148 @@
   gender = {sn},
   url = {https://wiki.piratenbrandenburg.de/images/f/f2/LSG-Bbg-13-5\_Urteil\_2014\_07\_09.pdf}
 }
+@RULING{BSG3615HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Urteil},
+  sign = {BSG 36/15-H S},
+  date = {2015-09-02},
+  gender = {sn},
+  url = {https://bsg.piratenpartei.de/2015/09/08/urteil-zu-bsg-3615/}
+}
+@RULING{BSGPP100127862,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {PP\#100127862},
+  date = {2015-09-30},
+  gender = {sn},
+  url = {https://bsg.piratenpartei.de/2015/09/30/beschluss-zu-pp100127862/}
+}
+@RULING{BSG20131005,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Urteil},
+  sign = {BSG 2013-10-05},
+  date = {2014-02-22},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#1925468784}
+}
+@RULING{BSG115HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Urteil},
+  sign = {BSG 1/15-H S},
+  date = {2015-06-04},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#2044406202}
+}
+@RULING{BSG3014HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 30/14-H S},
+  date = {2014-07-31},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#508875207}
+}
+@RULING{BSG4414HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 44/14-H S},
+  date = {2014-12-04},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#359944374}
+}
+@RULING{BSG3215HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 32/15-H S},
+  date = {2015-06-25},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#1317298312}
+}
+@RULING{BSG115HSBefangeheitIV,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 1/15-H S},
+  date = {2015-05-09},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#2044406202}
+}
+@RULING{BSG115HSBefangeheitIII,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 1/15-H S},
+  date = {2015-04-30},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#2044406202}
+}
+@RULING{BSG2815HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Urteil},
+  sign = {BSG 28/15-H S},
+  date = {2015-07-23},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#1937883727}
+}
+@RULING{BSG201305062BefangenheitI,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 2013-05-06-2},
+  date = {2013-05-29},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#11047632}
+}
+@RULING{BSG201305062BefangenheitII,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 2013-05-06-2},
+  date = {2013-06-10},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#11047632}
+}
+@RULING{BGHIIARZ101,
+  court = {Bundesgerichtshof},
+  shortcourt = {BGH},
+  decisiontype = {Beschluss},
+  sign = {II ARZ 1/01},
+  journaltitle = {NJW-RR},
+  journalyear = {2002},
+  journalpage = {789},
+  date = {2002-02-04},
+  gender = {sn},
+  url = {https://www.jurion.de/Urteile/BGH/2002-02-04/II-ARZ-1_01}
+}
+@RULING{BGHXIZR38801,
+  court = {Bundesgerichtshof},
+  shortcourt = {BGH},
+  decisiontype = {Beschluss},
+  sign = {XI ZR 388/01},
+  journaltitle = {NJW},
+  journalyear = {2002},
+  journalpage = {2396},
+  date = {2002-05-14},
+  gender = {sn},
+  url = {https://www.jurion.de/Urteile/BGH/2002-05-14/XI-ZR-388_01}
+}
+@RULING{OLGNaumburg3WF7609,
+  court = {Oberlandesgericht Naumburg},
+  shortcourt = {OLG Naumburg},
+  decisiontype = {Beschluss},
+  sign = {3 WF 76/09},
+  date = {2009-06-04},
+  gender = {sn},
+  url = {https://www.jurion.de/Urteile/OLG-Naumburg/2009-06-04/3-WF-76_09}
+}
+
 @RULING{LSGBB147,
   court = {Landesschiedsgericht~Brandenburg},
   shortcourt = {LSG~BB},
@@ -202,5 +367,14 @@
   gender = {sn},
   url = {https://wiki.piratenbrandenburg.de/images/4/4a/LSG-Bbg-14-6_Urteil_2015_04_25.pdf}
 }
-
-
+@RULING{BVerfGE17294,
+  court 			= {Bundesverfassungsgericht},
+  shortcourt 			= {BVerfG},
+  decisiontype 			= {Urteil},
+  sign 				= {2 BvR 42, 83, 89/63},
+  decisioncollection		= {BVerfGE 17},
+  decisioncollectionpage	= {294},
+  date				= {1964-03-24},
+  gender			= {sn},
+  url				= {http://www.servat.unibe.ch/dfr/bv017294.html#Rn014}
+}
