Gliederungspunkte u. Stichworte zum Inhalt hinzugefügt

--- a/Verfahrensablauf.tex
+++ b/Verfahrensablauf.tex
@@ -14,6 +14,10 @@
 %\section{Analoge Anwendung anderer Verfahrensordnungen}
 %\blindtext[5]
 %\section{Fristberechnung}
+%\section{Die Öffentlichkeit des Verfahrens}
+%Grundsatz der Öffentlichkeit
+%Nichtöffentliche Verfahren (auf Antrag; gebundene Entscheidung in Disziplinarsachen, freie Entscheidung bei sonstigen Sachen)
+%Wiederherstellung der Öffentlichkeit (z.B. bei Verwirkung des Schutzrechtes)
 
 %\chapterbib
 % \end{refsection}
